# FWI-resolution-increase

./: .env_example  .gitignore  LICENSE  README.md  REAL_STATUS.md  SETUP_COMPLETE.md  pyproject.toml  requirements.txt  run_preprocessing.py  run_training.py
configs/: base.yaml  model_configs.yaml  params.yaml
experiment/: README.md
experiment/ERA5_reanalysis_fwi/: convertfwi2017.py
experiments/: run_baselines.py
ml-experiment/: COMPREHENSIVE_EXPERIMENT_SUMMARY.md  PROJECT_GOALS_AND_GUIDELINES.md  fire_location_1km_values.json
notebooks/: 01_data_exploration.ipynb
sandbox/: aggregate_all_data.py  aggregate_data_fixed.py  check_dataset_quality.py  complete_data_aggregation.py  monitor_preprocessing.py  process_all_data.py  run_partial_preprocessing.py  simple_aggregation.py  step1_extract_and_process_era5_land.py  step1_process_era5_land.py  step2_process_era5_atmospheric.py  step3_merge_unified_dataset.py  step3_merge_unified_dataset_v2.py  step3_mock_uerra.py  step3_process_uerra.py  step3_process_uerra_fast.py  step4_process_esa_landcover.py  step5_final_hierarchical_merge.py  validate_unified_dataset.py  validate_unified_quick.py  verify_dataset.py  verify_evaluation.py  verify_normalization.py
scripts/: 01_create_grid.py  02_process_fwi.py  03_process_era5_land.py  04_process_era5_atmospheric.py  05_process_uerra.py  06_process_landcover.py  07_unify_datasets.py  08_normalize_dataset.py  download_all.py  prepare_data.py  run_all_experiments.py
src/: __init__.py  data_loader.py  data_processing.py  evaluate.py  model.py  models.py  train.py  utils.py
(+99 files in other folders)
