[project]
name = "fwi-resolution-increase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cdsapi>=0.7.4",
    "cfgrib>=0.9.15.0",
    "h5netcdf>=1.6.3",
    "joblib>=1.5.1",
    "matplotlib>=3.9.4",
    "netcdf4>=1.7.2",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "rasterio>=1.4.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "tensorflow-keras>=0.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "xarray>=2024.7.0",
    "xgboost>=2.1.4",
]
