[project]
name = "fwi-resolution-increase"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "cartopy>=0.23.0",
    "cfgrib>=0.9.15.0",
    "dask>=2024.8.0",
    "eccodes>=2.43.0",
    "matplotlib>=3.9.4",
    "rasterio>=1.4.3",
    "rioxarray>=0.15.0",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "xarray>=2024.7.0",
]
